update , fix issues

--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -43,7 +43,7 @@
         <div class="panel-body panel-body-list"></div>
       {{else}}
         <div class="panel-body">
-          <table class="table table-hover   panel-body-list">
+          <table class="table table-hover panel-body-list {{tableclass}}">
             {{#if caption}}
             <caption>
               <div class="title">{{caption}}</div>
