--- a/js/app/templates/layouts/header.html
+++ b/js/app/templates/layouts/header.html
@@ -2,4 +2,6 @@
     <img src="images/ralogo.gif" />
     <img src= "images/listenthinksolve-horz.gif"/>
 </a>
-<p class="signed-user ">signed in as<a href="#/profile" class="navbar-link signed-user-account btn-embed">{{user.name}}</a></p>
+<p class="signed-user ">signed in as<a href="#/profile" class="navbar-link signed-user-account btn-embed">{{user.name}}</a>
+<a class="feedback" target="_blank" href="/campus/Lists/issues/AllItems.aspx" title="add feedback"><img src="images/feedback-icon.png"></a>
+</p>
