--- a/css/app/module.css
+++ b/css/app/module.css
@@ -49,6 +49,15 @@
     font-weight: bolder;
 }
 
+#header .signed-user   .feedback{
+    position: relative;
+    bottom: 2px;
+}
+
+#header .signed-user   .feedback:hover{
+    opacity: .8;
+}
+
 /*footer*/
 #footer .text-muted{
     color:#fff;
@@ -711,8 +720,22 @@ a.profilelink:hover img{
     border-color: #6EE2FF;
     box-shadow: 0px 0px 14px #6EE2FF !important;
 }
+
+/*http://stackoverflow.com/a/13625843 */
+.panel-notify-birthday .squareimg  {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 100%;
+}
+
 .panel-notify-birthday   a.profilelink img{
     box-shadow: 0px 0px 6px #ccc;
+    width:100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: absolute;
 }
 
 .panel-notify-birthday  .carousel-indicators {
