--- a/js/app/templates/home/notify_newhire.html
+++ b/js/app/templates/home/notify_newhire.html
@@ -14,12 +14,12 @@
         <div class="carousel-inner"> 
         {{#each contacts}}
           <!-- Quote  {{@index}} -->
-          <div class="item hire-{{id}}  {{#unless @index}}active{{/unless}}">
+          <div class="item hire-{{nameRecordId}}  {{#unless @index}}active{{/unless}}">
             <blockquote>
               <div class="row">
                 <div class="col-sm-3 text-center avatar">
                     <div class="contact-img-box">
-                        <a href="#employees/{{id}}" data-employee-id="{{id}}" class="profilelink">
+                        <a href="#employees/{{nameRecordId}}" data-employee-id="{{nameRecordId}}" class="profilelink">
                             <img class="img-circle  img-thumbnail" src="{{photo}}">
                         </a>
                     </div>
@@ -37,14 +37,5 @@
         <!-- Carousel Buttons Next/Prev -->
         <a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
         <a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
-      </div>
-
-      <!-- <div class="avatar"><a href="#" class="pull-left profilelink"><img src="http://placehold.it/80x80" alt="..." class="img-circle img-thumbnail"></a></div>
-                                                            <div class="intro">
-                                                                <i class="fa fa-quote-left fa-2x pull-left "></i>
-                                                                        ...tomorrow we will run faster, stretch out our arms farther...
-                                                                        And then one fine morning— So we beat on, boats against the
-                                                                        current, borne back ceaselessly into the past.
-                                                            
-                                                            </div>   -->                                                      
+      </div>                                                  
 </div>
