--- a/js/app/templates/home/notify_birthday.html
+++ b/js/app/templates/home/notify_birthday.html
@@ -20,7 +20,7 @@
                     {{#each this}}
                             <div class="col-md-4">
                                 <div class="squareimg">
-                                    <a href="#employees/{{nameRecordId}}" data-employee-id="{{nameRecordId}}" class="profilelink"><img src="{{photo}}" alt="" class="img-circle img-thumbnail">                                
+                                    <a href="#campus/employees" data-employee-id="{{nameRecordId}}" class="profilelink"><img src="{{photo}}" alt="" class="img-circle img-thumbnail">                                
                                     </a>
                                  </div>
                                 <div class="label label-default">{{formatDate birthday}}</div>
