--- a/js/app/templates/home/notify_newhire.html
+++ b/js/app/templates/home/notify_newhire.html
@@ -19,7 +19,7 @@
               <div class="row">
                 <div class="col-sm-3 text-center avatar">
                     <div class="contact-img-box">
-                        <a href="#employees/{{nameRecordId}}" data-employee-id="{{nameRecordId}}" class="profilelink">
+                        <a href="#campus/employees" data-employee-id="{{nameRecordId}}" class="profilelink">
                             <img class="img-circle  img-thumbnail" src="{{photo}}">
                         </a>
                     </div>
