--- a/js/app/templates/home/suggestion.html
+++ b/js/app/templates/home/suggestion.html
@@ -1,6 +1,6 @@
-<div class="icon pull-left">
-    <img src="images/contact-icon.png"/>
-</div>
-<div class="suggestion-link">
-    <a class="opener" href="#feedback">Suggestion <br/>box</a>
-</div>
+<span class="icon">
+    <img src="images/feedback-icon.png"/>
+</span>
+<span class="feedback-link">
+    <a target="_blank" href="/campus/Lists/issues/AllItems.aspx">Feedback to the site</a>
+</span>
