--- a/js/app/templates/layouts/header.html
+++ b/js/app/templates/layouts/header.html
@@ -2,6 +2,14 @@
     <img src="images/ralogo.gif" />
     <img src= "images/listenthinksolve-horz.gif"/>
 </a>
-<p class="signed-user ">signed in as<a href="#/profile" class="navbar-link signed-user-account btn-embed">{{user.name}}</a>
-<a class="feedback" target="_blank" href="/campus/Lists/issues/AllItems.aspx" title="add feedback"><img src="images/feedback-icon.png"></a>
-</p>
+<div class="top-right-banner">
+    <div class="signed-user item">
+        signed in as<a href="#/profile" class="navbar-link signed-user-account btn-embed">{{user.name}}</a>
+    </div>
+    <div class="suggestion item">
+        <img src="images/contact-icon.png"/>
+        <span class="suggestion-link">
+            <a class="opener" href="#">Suggestion Box</a>
+        </span>
+    </div>
+</div>
