--- a/js/app/templates/partials/orgchart.html
+++ b/js/app/templates/partials/orgchart.html
@@ -10,8 +10,8 @@
 <div class="tree container">
     <ul>
         {{#with root}}
-        <li class="item-{{id}}">
-            <div class="item-inner" data-item-id="{{nameRecordId}}">
+        <li class="item-{{id}} item-supervisor">
+            <div class="item-inner " data-item-id="{{nameRecordId}}">
                 <div class="photo"><img src="{{#if photo}}{{photo}}{{else}}images/defaultavatar.png{{/if}}" /></div>
                 <div class="name">{{name}}</div>
                  {{#if title}}<div class="title">{{title}}</div>{{/if}}
@@ -19,8 +19,7 @@
             {{#if reportees}}
             <ul>
                 {{#each reportees}}
-                {{debugger this}}
-                <li class="item-{{id}} item-leaf {{#unless reportees}}nochild{{/unless}}">
+                <li class="item-{{id}} item-leaf {{#if reportees}} is-superVisor{{/if}}">
                     <div class="item-inner" data-item-id="{{id}}">
                         <div class="photo"><img src="{{#if photo}}{{photo}}{{else}}images/defaultavatar.png{{/if}}" /></div>
                         <div class="name">{{name}}</div>
