--- a/js/app/templates/partials/suggestion_modal.html
+++ b/js/app/templates/partials/suggestion_modal.html
@@ -9,16 +9,16 @@
             </label>    
        </div>
        <div class="subject item">
-            <input type="text" class="form-control input" name="Subject" placeholder="enter the subject.">
+            <input type="text" class="form-control input" name="Subject" placeholder="Enter the subject">
        </div>
        <div class="content item">
-           <textarea class="form-control input" rows="20"  name="Body" placeholder="Enter what you want to say here."></textarea>
+           <textarea class="form-control input" rows="20"  name="Body" placeholder="Enter your suggestions here"></textarea>
        </div>   
     </div>
 
     <div class="footer inline">
         <div class="buttons">
-             <button type="submit" data-loading-text="Posting Suggestion ..." class="btn btn-primary btnsubmit">Submit</button>
+             <button type="submit" data-loading-text="Sending the Suggestion ..." class="btn btn-primary btnsubmit">Submit</button>
         </div>
     </div>
 </form>
