--- a/js/app/templates/home/campus_update.html
+++ b/js/app/templates/home/campus_update.html
@@ -3,7 +3,7 @@
 </div>
 <div class="panel-body">
     <div class="row">
-        <div class="list-group list-group-src shadow-bottom-lr">
+        <div class="list-group list-group-src">
           <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_news}}
           <div class="banner-right">
           {{#each newsTypes}}
