--- a/js/app/templates/home/notify_birthday.html
+++ b/js/app/templates/home/notify_birthday.html
@@ -23,7 +23,7 @@
                                     <a href="#campus/employees" data-employee-id="{{nameRecordId}}" class="profilelink"><img src="{{photo}}" alt="" class="img-circle img-thumbnail">                                
                                     </a>
                                  </div>
-                                <div class="label label-default">{{formatDate birthday}}</div>
+                                <div class="label label-default">{{formatDate birthday  year=false}}</div>
                             </div>
                     {{/each}}
                 </div>
