--- a/js/app/templates/home/notify_newhire.html
+++ b/js/app/templates/home/notify_newhire.html
@@ -18,14 +18,14 @@
           <div class="item hire-{{nameRecordId}}  {{#unless @index}}active{{/unless}}">
             <blockquote>
               <div class="row">
-                <div class="col-sm-3 text-center avatar">
+                <div class="col-xs-4 text-center avatar">
                     <div class="contact-img-box">
                         <a href="#campus/employees" data-employee-id="{{nameRecordId}}" class="profilelink">
                             <img class="img-circle  img-thumbnail" src="{{photo}}">
                         </a>
                     </div>
                 </div>
-                <div class="col-sm-9 intro">
+                <div class="col-xs-8 intro">
                   <p class="statement" data-item-index="{{@index}}">{{{intro}}}</p>
                   <p class="small"><span class="name site-role label label-primary">{{name}}</span><span class="team">{{team}}</span><span class="project">{{project}}</span></p>
                 </div>
