--- a/js/app/templates/partials/contactlist.html
+++ b/js/app/templates/partials/contactlist.html
@@ -17,7 +17,7 @@
   <td><b>{{chinesename}}</b></td>
   <td>{{ext}}</td>
   <td>{{team}}</td>
-  <td>{{manager}}</td>
+  <td>{{supervisor}}</td>
 </tr>
 {{/each}}
 {{else}}
