--- a/css/app/base.css
+++ b/css/app/base.css
@@ -1,8 +1,13 @@
 body{
     font-size:12px;
     line-height: 1.4;
+
     /* font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important; */
 }
+
+body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6 {
+     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif, "Microsoft YaHei",'宋体' , Tahoma;
+ }
 
 h1,h2,h3,h4, h5,h6 {
      /* font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important; */
