--- a/js/app/templates/home/campus_update.html
+++ b/js/app/templates/home/campus_update.html
@@ -1,10 +1,7 @@
-<div class="panel-head">
-    <h1 data-title="Campus Update"> {{title}} </h1>
-</div>
 <div class="panel-body">
     <div class="row">
         <div class="list-group list-group-src">
-          <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_news}}
+          <div class="list-group-item title"> {{subtitle_news}}
           <div class="banner-right">
           {{#each newsTypes}}
             <span class="name site-role label label-{{this}}" data-type="{{this}}">{{this}}</span>
