--- a/js/app/templates/home/layout.html
+++ b/js/app/templates/home/layout.html
@@ -4,11 +4,11 @@
       <section class="panel-notify panel-container">
         <div class="">
              <div class="row">
-                  <div class="col-md-5 ">
+                  <div class="col-md-6 ">
                         <div class="panel   panel-notify-sub  panel-notify-birthday"></div>
                   </div>
-                  <div class="col-md-7 ">
-                         <div class="panel panel-default panel-notify-sub panel-notify-hire shadow-paper"></div>
+                  <div class="col-md-6 ">
+                         <div class="panel panel-default panel-notify-sub panel-notify-hire"></div>
                   </div>
           </div>
         </div>
