--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -19,11 +19,11 @@
         <dl class="below dl-horizontal">
             <dt>Project</dt>
             <dd>{{contacts.project}} &nbsp;</dd>
-            <dt>Manager</dt>
-            <dd>{{contacts.manager}} &nbsp;</dd>
+            <dt>Supervisor</dt>
+            <dd>{{contacts.supervisor}} &nbsp;</dd>
             <dt>Team</dt>
             <dd>{{contacts.team}} &nbsp;</dd>
-            <dt>EXT number</dt>
+            <dt>Ext. number</dt>
             <dd>{{contacts.ext}} &nbsp;</dd>
         </dl>
     </div>
